--- a/WebPage.html
+++ b/WebPage.html
@@ -4,7 +4,7 @@
    <title>
         Expenses Tracker
     </title>
-    <body style="background-color:rgba(67, 72, 100, 0.719);">
+    <body style="background-color:#1c1c1c;">
         <h1><u>This is the part with the content.</u></h1>
     </body>
 </html>
